Closed Bug 297082 Opened 21 years ago Closed 21 years ago

potential OOM crash [@ nsNativeAppSupportWin::GetCmdLineArgs]

Categories

(Core :: Widget: Win32, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 obsolete file)

this code is from Cenzic Hailstorm 2.6
Attached patch handle alloc failure (obsolete) — — Splinter Review
Assignee: win32 → timeless
Status: NEW → ASSIGNED
Attachment #185678 - Flags: superreview?(neil.parkwaycc.co.uk)
Attachment #185678 - Flags: review?(neil.parkwaycc.co.uk)
Comment on attachment 185678 [details] [diff] [review] handle alloc failure rs=me
Attachment #185678 - Flags: superreview?(neil.parkwaycc.co.uk)
Attachment #185678 - Flags: superreview+
Attachment #185678 - Flags: review?(neil.parkwaycc.co.uk)
Attachment #185678 - Flags: review+
Comment on attachment 185678 [details] [diff] [review] handle alloc failure hmm, won't a break just fall through to the aResult = do_CreateInstance( COMMANDLINESERVICE, &rv ); so it won't crash but it won't return failure...
Attachment #185678 - Flags: approval1.8b3?
Comment on attachment 185678 [details] [diff] [review] handle alloc failure a=chofmann
Attachment #185678 - Flags: approval1.8b3? → approval1.8b3+
Comment on attachment 185678 [details] [diff] [review] handle alloc failure mozilla/xpfe/bootstrap/nsNativeAppSupportWin.cpp 1.120
Attachment #185678 - Attachment is obsolete: true
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: