Bug 297082 potential OOM crash [@ nsNativeAppSupportWin::GetCmdLineArgs] r=neil sr=neil a=chofmann